Firefox scrollbar bugfix

--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
+  scrollbar-width: none; /*Firefox*/
 }
 .movie-row::-webkit-scrollbar {
   display: none;
 }
-
 #row-title {
   margin-left: 1%;
   font-size: 2.3vw;
